# UpsMonitoringPlasmoid

./: .gitignore  README.md  install.sh
testjs/: .plasmateprojectrc  metadata.desktop
testjs/contents/code/: testjs.js
ups-monitor/: CMakeLists.txt  Makefile  moc_temperature-offset-delegate.cpp  moc_temperature.cpp  monitoricon.cpp  temperature.cpp  temperature.h  ui_temperature-config.h  ups.h
ups-plasma/: CMakeLists.txt
ups-plasma/src/: CMakeLists.txt
ups-plasma/src/upsdataengine/: CMakeLists.txt  main.cpp  plasma-engine-upsdata.desktop  ups.cpp  ups.h  upsdataengine.cpp  upsdataengine.h
ups-plasma/src/upsmonitorUI/: CMakeLists.txt
ups-plasma/src/upsmonitorUI/package/: metadata.desktop
ups-plasma/src/upsmonitorUI/package/contents/config/: config.qml
ups-plasma/src/upsmonitorUI/package/contents/ui/: Applet.qml  ConfigGeneral.qml  SinglePlotter.qml  main.qml  upsConfig.qml
ups-plasma/src/upsplasmoid/: CMakeLists.txt  applet.cpp  applet.h  plasma-applet-ups-monitor.desktop  plotter.cpp  ups-config.ui  ups.cpp  ups.h
ups-plasma/test/: CMakeLists.txt  UpsTests.cpp  UpsTests.h
upsdataengine/: metadata.desktop
upsdataengine/contents/code/: main.rb
upsdataenginecpp/upsdataenginecpp/: upsdataengine.cpp  upsdataengine.h
